--- a/OOUIKit.xcodeproj/xcshareddata/xcschemes/OOUIKit.xcscheme
+++ b/OOUIKit.xcodeproj/xcshareddata/xcschemes/OOUIKit.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2566A3A2B16AE94AA187ACDC"
+               BlueprintIdentifier = "354881B95F972E75C8856202"
                BuildableName = "OOUIKit.framework"
                BlueprintName = "OOUIKit"
                ReferencedContainer = "container:OOUIKit.xcodeproj">
@@ -28,7 +28,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F9545781A9AE9FBB0B0C8DF8"
+               BlueprintIdentifier = "3D7B3A07908DBEA9B5DA5DDC"
                BuildableName = "OOBaseTests.xctest"
                BlueprintName = "OOBaseTests"
                ReferencedContainer = "container:OOUIKit.xcodeproj">
@@ -42,7 +42,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2566A3A2B16AE94AA187ACDC"
+               BlueprintIdentifier = "354881B95F972E75C8856202"
                BuildableName = "OOUIKit.framework"
                BlueprintName = "OOUIKit"
                ReferencedContainer = "container:OOUIKit.xcodeproj">
@@ -54,15 +54,14 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "F9545781A9AE9FBB0B0C8DF8"
+               BlueprintIdentifier = "3D7B3A07908DBEA9B5DA5DDC"
                BuildableName = "OOBaseTests.xctest"
                BlueprintName = "OOBaseTests"
                ReferencedContainer = "container:OOUIKit.xcodeproj">
@@ -72,7 +71,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2566A3A2B16AE94AA187ACDC"
+            BlueprintIdentifier = "354881B95F972E75C8856202"
             BuildableName = "OOUIKit.framework"
             BlueprintName = "OOUIKit"
             ReferencedContainer = "container:OOUIKit.xcodeproj">
@@ -85,7 +84,6 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -96,7 +94,7 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2566A3A2B16AE94AA187ACDC"
+            BlueprintIdentifier = "354881B95F972E75C8856202"
             BuildableName = "OOUIKit.framework"
             BlueprintName = "OOUIKit"
             ReferencedContainer = "container:OOUIKit.xcodeproj">
@@ -115,7 +113,7 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2566A3A2B16AE94AA187ACDC"
+            BlueprintIdentifier = "354881B95F972E75C8856202"
             BuildableName = "OOUIKit.framework"
             BlueprintName = "OOUIKit"
             ReferencedContainer = "container:OOUIKit.xcodeproj">
